# PistompPedalboard

./: .gitignore  CMakeLists.txt  FX_NOTES.md  IDEAS.md  README.md  ROADMAP.md  chain.h  docker-compose.yml  dsp_util.h  effect.h  footswitch_control.h  fx_factory.h  fx_id.h  fx_registry.cpp  fx_registry.h  input_vu.h  manifest.cpp  manifest.h  meta.cpp  meta.h  pedal_controls.h  pedal_ui.cpp  pedal_ui.h  pedalboard.cpp  pedalboard_render.cpp  presets.cpp  presets.h  rigs.cpp  rigs.h  setlists.cpp  setlists.h  store_util.h  tempo.h  ui_events.h  web_server.cpp  web_server.h
.github/workflows/: build.yml
docker/: Dockerfile
docs/adr/: 0001-svelte-over-react.md  0002-desktop-app-sync-and-sharing.md
effects/: ambient_delay.h  amp_nam.h  analog_delay.h  chorus.h  comp.h  delay.h  delay_dsp.h  detune.h  dimension.h  distortion.h  drive.h  drive_base.h  drive_dsp.h  eq.h  flanger.h  fuzz.h  gate.h  gold_drive.h  hall_reverb.h  input_gain.h  mod_dsp.h  multitap_delay.h  octave.h  output_gain.h  overdrive.h  phaser.h  pitch_dsp.h  plate_reverb.h  reverb.h  reverb_dsp.h  reverse_delay.h  rotary.h  shimmer_reverb.h  sustainer.h  swell.h  tape_echo.h  tremolo.h  tuner.h  uni_vibe.h  vibrato.h
presets/: Ambient Swell.json  Clean Worship.json  Driven Lead.json
presets/drive/: Hard Overdrive.json  Light Crunch.json
rigs/: Ambient Swell.json  Clean Worship.json  Driven Lead.json
scripts/: build-mac.sh  build.sh  deploy.sh  dev-mac.sh  shell.sh  test-mac.sh
setlists/: Sunday Morning.json
tests/: CMakeLists.txt  test_chain_grid.cpp  test_chain_stress.cpp  test_dsp_invariants.cpp  test_registry.cpp  test_rig_roundtrip.cpp  test_util.h
ui/: ui_controller.cpp  ui_controller.h
web/: app.js  index.html  style.css
webui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
webui/src/: App.svelte  app.css
webui/src/lib/: AddFxModal.svelte  AssignStrip.svelte  EmptySlot.svelte  Experiments.svelte  FootswitchBar.svelte  FxIcon.svelte  FxParamsPanel.svelte  FxTile.svelte  InputMeters.svelte  OutputMeter.svelte  ParamControl.svelte  Pedal.svelte  PedalPresets.svelte  RigControls.svelte  SetlistEditor.svelte  Setlists.svelte  Sidebar.svelte  TempoControl.svelte  TunerButton.svelte  TunerModal.svelte  api.js  api.ts  fsColors.ts  presets.svelte.ts  rigs.svelte.ts  store.svelte.js  store.svelte.ts  types.ts
webui/src/lib/controls/: Button.svelte  Fader.svelte  Knob.svelte  LevelBar.svelte  Switch.svelte  peakHold.svelte.ts
